# raptor-dbw-ros

./: .gitignore  README.md  dbw.launch
.circleci/: config.yml
can_dbc_parser/: CHANGELOG.rst  CMakeLists.txt  package.xml
can_dbc_parser/include/can_dbc_parser/: Dbc.h  DbcBuilder.h  DbcMessage.h
can_dbc_parser/src/: Dbc.cpp  DbcBuilder.cpp  DbcMessage.cpp  DbcSignal.cpp  DbcUtilities.h  LineParser.cpp
dbc/: CMakeLists.txt  package.xml
dbc/include/dbc/: Dbc.h  DbcBuilder.h  DbcMessage.h  DbcSignal.h  LineParser.h
dbc/src/: DbcMessage.cpp  DbcUtilities.h  LineParser.cpp
dbw_pacifica_can/: CMakeLists.txt  New_Eagle_DBW.dbc  New_Eagle_DBW_3.4.411.dbc  Pacifica_AKit_DBW_Comms.dbc  package.xml
dbw_pacifica_can/include/dbw_pacifica_can/: dispatch.h
dbw_pacifica_can/launch/: dbw.launch  debug.launch  joystick.launch
dbw_pacifica_can/scripts/: startup_joystick.bash  startup_joystick_rviz.bash
dbw_pacifica_can/src/: DbwNode.cpp  DbwNode.h  node.cpp  nodelet.cpp
dbw_pacifica_can/src/test/: sampleTest.cpp
dbw_pacifica_can/test/: sample_test_launch.test
dbw_pacifica_joystick_demo/: CMakeLists.txt  package.xml
dbw_pacifica_joystick_demo/launch/: joystick_demo.launch
dbw_pacifica_joystick_demo/src/: JoystickDemo.cpp  JoystickDemo.h
dbw_pacifica_joystick_speed_demo/: CMakeLists.txt  package.xml
dbw_pacifica_joystick_speed_demo/launch/: joystick_speed_demo.launch
dbw_pacifica_joystick_speed_demo/src/: JoystickDemo.cpp  JoystickDemo.h  joystick_demo.cpp
dbw_pacifica_joystick_speed_demo/tests/: CMakeLists.txt
dbw_pacifica_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
dbw_pacifica_msgs/bmr/: README.md
dbw_pacifica_msgs/msg/: AcceleratorPedalCmd.msg  AcceleratorPedalReport.msg  Brake2Report.msg  BrakeCmd.msg  BrakeReport.msg  DoorRequest.msg  DoorState.msg  DriverInputReport.msg  FaultActionsReport.msg  GearCmd.msg  GearReject.msg  GearReport.msg  GlobalEnableCmd.msg  HighBeamState.msg  HmiGlobalEnableReport.msg  HornState.msg  Ignition.msg  LowBeam.msg  MiscCmd.msg  MiscReport.msg  OtherActuatorsReport.msg  ParkingBrake.msg  Steering2Report.msg  SteeringCommandType.msg  SteeringReport.msg  SurroundReport.msg  WatchdogStatus.msg  WheelSpeedReport.msg  WheelSpeedType.msg  WiperRear.msg
pacifica_dbw/: CMakeLists.txt  package.xml
pdu/: CHANGELOG.rst  CMakeLists.txt  PDU_dbc.dbc  package.xml
pdu/src/: node.cpp  pdu.cpp  pdu.h
pdu_msgs/: CHANGELOG.rst  package.xml
pdu_msgs/msg/: FuseReport.msg  FuseStatus.msg  RelayCommand.msg  RelayReport.msg  RelayState.msg  RelayStatus.msg
raptor_dbw/: CHANGELOG.rst  CMakeLists.txt  package.xml
raptor_dbw_can/: CHANGELOG.rst  CMakeLists.txt  nodelets.xml  package.xml
raptor_dbw_can/include/raptor_dbw_can/: dispatch.h
raptor_dbw_can/launch/: dbw.launch  debug.launch
raptor_dbw_can/scripts/: startup_dbw.bash  startup_joystick.bash  startup_joystick_rviz.bash
raptor_dbw_can/src/: DbwNode.cpp  DbwNode.h  node.cpp  nodelet.cpp
raptor_dbw_joystick_demo/: CHANGELOG.rst  CMakeLists.txt  package.xml
raptor_dbw_joystick_demo/launch/: joystick_demo.launch
raptor_dbw_joystick_demo/src/: JoystickDemo.cpp  JoystickDemo.h  joystick_demo.cpp
raptor_dbw_joystick_speed_demo/: CHANGELOG.rst  CMakeLists.txt  package.xml
raptor_dbw_joystick_speed_demo/launch/: joystick_speed_demo.launch
raptor_dbw_joystick_speed_demo/src/: JoystickDemo.cpp  JoystickDemo.h  joystick_demo.cpp
raptor_dbw_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
raptor_dbw_msgs/bmr/: README.md
raptor_dbw_msgs/msg/: DoorRequest.msg  HighBeam.msg  LowVoltageSystemReport.msg  SonarArcNum.msg  SteeringCmd.msg  SteeringReport.msg  WheelPositionReport.msg  WiperFront.msg  WiperRear.msg
src/: README.md  dbw.launch
src/dbc/include/dbc/: DbcMessage.h  DbcSignal.h
src/dbc/src/: DbcBuilder.cpp  DbcMessage.cpp  DbcSignal.cpp  LineParser.cpp
src/dbw_pacifica_can/: New_Eagle_DBW.dbc  New_Eagle_DBW_3.1.292.dbc  package.xml
src/dbw_pacifica_can/include/dbw_pacifica_can/: dispatch.h
src/dbw_pacifica_can/launch/: dbw.launch  debug.launch  joystick.launch  offline.launch
src/dbw_pacifica_can/src/: DbwNode.cpp  DbwNode.h
src/dbw_pacifica_joystick_demo/: CMakeLists.txt
src/dbw_pacifica_joystick_demo/launch/: joystick_demo.launch
src/dbw_pacifica_joystick_demo/src/: JoystickDemo.cpp  joystick_demo.cpp
src/dbw_pacifica_joystick_speed_demo/: CHANGELOG.rst
src/dbw_pacifica_joystick_speed_demo /: package.xml
src/dbw_pacifica_joystick_speed_demo /launch/: joystick_speed_demo.launch
src/dbw_pacifica_joystick_speed_demo /src/: JoystickDemo.cpp  JoystickDemo.h
src/dbw_pacifica_joystick_speed_demo/src/: JoystickDemo.h
src/dbw_pacifica_msgs/: CMakeLists.txt
src/dbw_pacifica_msgs/msg/: AcceleratorPedalCmd.msg  AcceleratorPedalReport.msg  ActuatorControlMode.msg  BrakeCmd.msg  BrakeReport.msg  ControlMode.msg  GearCmd.msg  HighBeam.msg  LowVoltageSystemReport.msg  MiscCmd.msg  MiscReport.msg  SteeringCmd.msg  SteeringReport.msg  Wiper.msg  WiperFront.msg
src/pacifica_dbw/: package.xml
src/pdu_msgs/: CMakeLists.txt
src/socketcan_bridge/src/: socketcan_to_topic.cpp  topic_to_socketcan.cpp
src/socketcan_interface/include/socketcan_interface/: socketcan.h
