<?xml version="1.0"?>
<package format="2">
  <name>can_dbc_parser</name>
  <version>1.0.0</version>
  <description>
    DBC file interface.  Read a DBC file, unpack CAN messages and convert to engineering units, pack values into CAN messages for publishing.
  </description>

  <author email="rborchert@neweagle.net">Ryan Borchert</author>
  <maintainer email="jlodi@neweagle.net">New Eagle</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>can_msgs</depend>
  <depend>roscpp</depend>
</package>
