<?xml version="1.0"?>
<package format="2">
  <name>dbw_pacifica_joystick_speed_demo</name>
  <version>1.0.12</version>
  <description>
    Demonstration of drive-by-wire with joystick with speed control
  </description>

  <license>BSD</license>
  <author email="jane.doe@example.com">Jane Doe</author>
  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>dbw_pacifica_msgs</depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>dbw_pacifica_can</exec_depend>

  <test_depend>roslaunch</test_depend>
</package>
