<?xml version="1.0"?>
<package format="2">
  <name>pacifica_dbw</name>
  <version>1.0.0</version>
  <description>
    A ROS interface to the New Eagle Raptor drive-by-wire controller
  </description>

  <license>BSD</license>
  <author email="rborchert@neweagle.net">Ryan Borchert</author>
  <maintainer email="rborchert@neweagle.net">Ryan Borchert</maintainer>
  <url type="website">http://www.neweagle.net</url>
  <url type="repository">https://github.com/NewEagleRaptor/pacifica-dbw-ros</url>
  <url type="bugtracker">https://github.com/NewEagleRaptor/pacifica-dbw-ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>dbw_pacifica_can</exec_depend>
  <exec_depend>dbw_pacifica_joystick_demo</exec_depend>
  <exec_depend>dbw_pacifica_joystick_speed_demo</exec_depend>
  <exec_depend>dbw_pacifica_msgs</exec_depend>
  <exec_depend>pdu</exec_depend>
  <exec_depend>pdu_msgs</exec_depend>
  <exec_depend>dbc</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
