<?xml version="1.0"?>
<package format="2">
  <name>pdu</name>
  <version>1.0.0</version>
  <description>
    Interface for the New Eagle Multiplex Power Distribution Module (MPDM)
    https://store.neweagle.net/product/multiplexed-power-distribution-module-mpdm/
  </description>

  <author email="rborchert@neweagle.net">Ryan Borchert</author>
  <maintainer email="jlodi@neweagle.net">New Eagle</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>can_msgs</depend>
  <depend>pdu_msgs</depend>
  <depend>can_dbc_parser</depend>

  <export>
  </export>
</package>
