<?xml version="1.0"?>
<package format="2">
  <name>raptor_dbw_joystick_demo</name>
  <version>1.0.12</version>
  <description>
    Demonstration of drive-by-wire with joystick
  </description>

  <license>BSD</license>
  <author email="jane.doe@example.com">Jane Doe</author>
  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>raptor_dbw_msgs</depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>raptor_dbw_can</exec_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>kvaser_interface</test_depend>
</package>
