<?xml version="1.0"?>
<package format="2">
  <name>raptor_dbw_msgs</name>
  <version>1.0.0</version>
  <description>
    Drive-by-wire messages for the New Eagle Raptor controller
  </description>

  <license>BSD</license>

  <author email="rborchert@neweagle.net">Ryan Borchert</author>
  <maintainer email="jlodi@neweagle.net">New Eagle</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <exec_depend>rosbag_migration_rule</exec_depend>

  <export>

  </export>

</package>
